# crpy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tests.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: dockerize.yaml  pre-commit.yaml  publish.yaml  test.yaml  try-build.yaml
crpy/: __init__.py  auth.py  cmd.py  common.py  docker_pull.py  docker_push.py  image.py  registry.py  storage.py  utils.py
src/: auth.py  cmd.py  docker_pull.py  docker_push.py  utils.py
tests/: test_auth.py  test_image_pull.py  test_registry_endpoints.py  test_url_parser.py
